--- a/index.html
+++ b/index.html
@@ -8,21 +8,9 @@
     <link rel="stylesheet" href="edits.css">
 </head>
 <body>
-    
-    <h1 style="text-align:center"><strong><em>Viraj "Gangsta" Panwar</em></strong></h1>
-    <h2 style="text-align:center"><strong><em>Know About Me Here.</em></strong></h2>
-    <h3 style="text-align:center">Yeah Boi If u wanna know about Gangsta you are at the right place.
-        Just scroll down
-    </h3>
-    <p>So hello there welcome to my website and hope you like it.</br>
-        So here it is,</br>
-        My real name: Viraj Panwar</br>
-        My ingame name: Gangsta</br>
-        my discord tag: Gangsta#4641</br>
-    </p>
-    <div class="boxed"><h4>About me</h4>
+    <div class="boxed"><h4>Om bhay</h4>
         <p class="p1">
-        I'm just a 17 Y/O teenager Who want's to build a gaming PC and Go Pro.
+        Om bhay ki pehli jhalak
         </p>
 </body>
 </html>
