--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Gangsta</title>
+    <title>Niggara</title>
     <link rel="stylesheet" href="edits.css">
 </head>
 <body>
+     <h1 style="text-align:center"><strong><em>Nigara Nigara</em></strong></h1>
+    <h2 style="text-align:center"><strong><em>Hua hai pehli baar ve</em></strong></h2>
     <div class="boxed"><h4>Om bhay</h4>
         <p class="p1">
         Om bhay ki pehli jhalak
